--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <meta name="author" content="Giorgio Ruanova">
+  <meta name="description" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica" />
+  <meta name="robots" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
+  <meta name="googlebot" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,7 +22,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>Walter Gandini</title>
+
+
+  <title>WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica</title>
 </head>
 
 <body>
