--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content=" Musica - Tatuaje - Pintura - Plastica" />
   <meta name="author" content="Giorgio Ruanova">
-  <meta name="description" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica" />
   <meta name="robots" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
   <meta name="googlebot" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
