--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content=" Musica - Tatuaje - Pintura - Plastica" />
   <meta name="author" content="Giorgio Ruanova">
-  <meta name="robots" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
-  <meta name="googlebot" content="WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="robots" content="WALTER GANDINI | Sitio Oficial">
+  <meta name="googlebot" content="WALTER GANDINI | Sitio Oficial">
 
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400&family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Updock&display=swap"
     rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
 
 
   <title>WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica</title>
@@ -36,7 +26,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  
+
   <div id="root"></div>
 
 </body>
