--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content=" Musica - Tatuaje - Pintura - Plastica" />
+  <meta name="description" content=" Sitio dedicado al artista Walter Gandini" />
   <meta name="author" content="Giorgio Ruanova">
   <meta name="robots" content="WALTER GANDINI | Sitio Oficial">
   <meta name="googlebot" content="WALTER GANDINI | Sitio Oficial">
