--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content=" Sitio dedicado al artista Walter Gandini" />
+  <meta name="description" content="Musica - Tatuaje - Pintura - Plastica" />
   <meta name="author" content="Giorgio Ruanova">
-  <meta name="robots" content="WALTER GANDINI | Sitio Oficial">
-  <meta name="googlebot" content="WALTER GANDINI | Sitio Oficial">
+  <meta name="robots" content="WALTER GANDINI | Ganesha Art Tattoo Studio">
+  <meta name="googlebot" content="WALTER GANDINI | Ganesha Art Tattoo Studio">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
     rel="stylesheet">
 
 
-  <title>WALTER GANDINI | Musica - Tatuaje - Pintura - Plastica</title>
+  <title>WALTER GANDINI | Ganesha Art Tattoo Studio</title>
 </head>
 
 <body>
