--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400&family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Updock&display=swap"
     rel="stylesheet">
 
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <title>WALTER GANDINI | Ganesha Art Tattoo Studio</title>
 </head>
 
